Fixed extra whitespace at the bottom of the homepage img

--- a/static/style.css
+++ b/static/style.css
@@ -2,11 +2,14 @@
 
 /* ############################################################ */
 /* base styling */
+#root {
+
+}
+
 body {
     font-family: 'Karla', sans-serif;
     background-color: #F9FFFC;
     color: #6B9080; 
-
 }
 
 button {
@@ -33,7 +36,12 @@ li {
     padding: 15px;
 }
 
-h2 {
+.wrapper {
+    height: 125vh;
+    width: 100vw;
+}
+
+h5 {
 
 }
 
@@ -48,22 +56,37 @@ h2 {
     background-size: cover; 
     background-position: center center;
     opacity: 0.75;
+    border: 1px solid red;
+
   }
 
 #homepage-text {
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -80%);
+    height: 25vh;
+    width: 50vw;
+    transform: translate(-50%, -500%);
+    text-align: center;
+    border: 1px solid red;
 
   }
 
+#homepage-options {
+    text-align: left;
+}
+
+#choice {
+    padding-bottom: 15px;
+}
+
 
 .col-homepage {
-    text-align: center;
     background-color: #F9FFFC;
     border-radius: 15px;
-    padding: 15px;
+    padding: 15px; 
+    opacity: 0.9;
+    border: 1px solid red;
 
   }
 
@@ -105,16 +128,16 @@ a:hover {
     display: flex;
     justify-content: center;
     padding-top: 10px;
-    margin-top: 10px;
-    
+    margin-top: 10px; 
 }
 
 #footer {
     margin-bottom: none;
     margin-top: none;
-    padding: 0, 0, 0, 0;
+    padding-top: none;
     background-color: #E4F4EE;
 }
 
-
-
+#root {
+    border: 1px solid red;
+}
